wrapped it in an mvc app

--- a/src/components/home-page/home.html
+++ b/src/components/home-page/home.html
@@ -1,5 +1,4 @@
-<h2>Home</h2>
-
-<p data-bind='text: message'></p>
-
-<button data-bind='click: doSomething'>Click me</button>
+<h1>Who's in the Park?</h1>
+<ul data-bind="foreach:inhabitants">
+	<li></li>
+</ul>
