--- a/src/components/home-page/home.html
+++ b/src/components/home-page/home.html
@@ -1,4 +1,7 @@
 <h1>Who's in the Park?</h1>
-<ul data-bind="foreach:inhabitants">
-	<li></li>
-</ul>
+<section data-bind="foreach:inhabitants">
+	<article>
+		<h2 data-bind="text: Name"></h2>
+		<span data-bind="text: Time"></span>
+	</article>
+</section>
