--- a/src/components/home-page/home.html
+++ b/src/components/home-page/home.html
@@ -1,7 +1,11 @@
 <h1>Who's in the Park?</h1>
-<section data-bind="foreach:inhabitants">
+<button data-bind="click:add">Add</button>
+<section data-bind="template: { foreach:inhabitants,
+								beforeRemove:hideElement,
+								afterAdd:showElement }">
 	<article>
 		<h2 data-bind="text: Name"></h2>
-		<span data-bind="text: Time"></span>
+		<span data-bind="text: InDateTime"></span>
+		<button data-bind="click:$parent.remove">Remove</button>
 	</article>
 </section>
