--- a/src/components/nav-bar/nav-bar.html
+++ b/src/components/nav-bar/nav-bar.html
@@ -3,29 +3,9 @@
   follows Bootstrap conventions. The only Knockout-specific parts are the data-bind
   attributes on the <li> elements.
 -->
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<div class="navbar navbar-fixed-top" role="navigation">
   <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">ao.parklife.web</a>
-    </div>
-    <div class="collapse navbar-collapse">
-
-      <ul class="nav navbar-nav">
-        <li data-bind="css: { active: route().page === 'home-page' }">
-          <a href="#">Home</a>
-        </li>
-
-        <li data-bind="css: { active: route().page === 'about-page' }">
-          <a href="#about">About</a>
-        </li>
-      </ul>
-
-    </div>
+    <header>
+    <h1>AO Parklife</h1>
   </div>
 </div>
