--- a/src/components/home-page/home.html
+++ b/src/components/home-page/home.html
@@ -1,10 +1,11 @@
-<h1>Who's in the Park?</h1>
+<h2>Who's in the Park?</h2>
 <button data-bind="click:add">Add</button>
 <section data-bind="template: { foreach:inhabitants,
 								beforeRemove:hideElement,
 								afterAdd:showElement }">
 	<article>
-		<h2 data-bind="text: Name"></h2>
+		<div><div /></div>
+		<h3 data-bind="text: Name"></h3>
 		<span data-bind="text: InDateTime"></span>
 		<button data-bind="click:$parent.remove">Remove</button>
 	</article>
