--- a/src/css/parklife.scss
+++ b/src/css/parklife.scss
@@ -22,6 +22,7 @@ article {
 	padding-bottom: 20px;
 	&:first-child { 
 		border-top: 1px dashed silver;
+		& > div { margin-top: 20px; }
 	}
 	div {
 		border-radius: 100px;
