can refresh inhabitants

--- a/src/components/home-page/home.html
+++ b/src/components/home-page/home.html
@@ -6,6 +6,6 @@
 	<article>
 		<div><div /></div>
 		<h3 data-bind="text: Name"></h3>
-		<span data-bind="text: RefreshDateTime"></span>
+		<p>Entered: <span data-bind="text: EnteredAreaDateTime"></span>
 	</article>
 </section>
