fixed some shit

--- a/src/components/home-page/home.html
+++ b/src/components/home-page/home.html
@@ -6,7 +6,7 @@
 	<div id="games-area" />
 	<div id="telephone-booth" />
 </section>
-<section data-bind="template: { foreach:inhabitants,
+<section id="inhabitants" data-bind="template: { foreach:inhabitants,
 								beforeRemove:hideElement,
 								afterAdd:showElement }">
 	<article>
