--- a/src/css/parklife.scss
+++ b/src/css/parklife.scss
@@ -56,29 +56,39 @@ section#floorplan {
 		left: 98px;
 		background: rgba(0, 100, 140, 0.0)
 	}
+	#tea-point { 
+		width: 118px;
+		height: 138px;
+		top: 146px;
+		left: 572px;
+		background: rgba(255, 100, 140, 0.0)
+	}
 }
 
-article {
-	margin-bottom: 2px;
-	border-bottom: 1px dashed silver;
-	padding: 20px 0;
-	&:first-child { 
-		border-top: 1px dashed silver;
-	}
-	div {
-		border-radius: 100px;
-		float: left; margin-right: 1em;
-	}
-	& > div {
-		background:#C6CDE0;
-		padding: 2px;
-		width: 68px;
-		height: 68px;
-		div {
-			background: #C6CDE0 url('../images/bobafett.jpg');
-			border: white 3px solid;
-		width: 64px;
-		height: 64px;
+section#inhabitants {
+	margin-left: 66%;
+	article {
+		margin-bottom: 2px;
+		border-bottom: 1px dashed silver;
+		padding: 20px 0;
+		&:first-child { 
+			border-top: 1px dashed silver;
 		}
-	}
-}	
+		div {
+			border-radius: 100px;
+			float: left; margin-right: 1em;
+		}
+		& > div {
+			background:#C6CDE0;
+			padding: 2px;
+			width: 68px;
+			height: 68px;
+			div {
+				background: #C6CDE0 url('../images/bobafett.jpg');
+				border: white 3px solid;
+			width: 64px;
+			height: 64px;
+			}
+		}
+	}	
+}
